--- a/YT_webscrapper_usingApi.ipynb
+++ b/YT_webscrapper_usingApi.ipynb
@@ -74,7 +74,7 @@
       },
       "outputs": [],
       "source": [
-        "api_key = \"AIzaSyAxq9kBzUFZwVJPbTc3rJLdAulxoOzBt7A\" # youtube api key v3\n",
+        "api_key = \"" # youtube api key v3\n",
         "\n",
         "channel_ids = [\"UCjWY5hREA6FFYrthD0rZNIw\",\n",
         "               \"UCzL_0nIe8B4-7ShhVPfJkgw\",\n",
